<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="137dp"
        android:layout_height="100dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/gato" />

    <TextView
        android:id="@+id/lblTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/lblTitle"
        android:textSize="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="364dp"
        android:layout_height="52dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/etNombreMascota"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblTitle2" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btnRegistrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNombre"
        app:layout_constraintVertical_bias="0.222">

        <RadioButton
            android:id="@+id/rbGato"
            android:layout_width="357dp"
            android:layout_height="44dp"
            android:layout_marginTop="16dp"
            android:text="@string/rbGato" />

        <RadioButton
            android:id="@+id/rbPerro"
            android:layout_width="356dp"
            android:layout_height="51dp"
            android:layout_marginTop="20dp"
            android:text="@string/rbPerro" />
    </RadioGroup>

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="380dp"
        android:layout_height="48dp"
        android:layout_marginBottom="60dp"
        android:background="@color/orange_cat"
        android:text="@string/btnRegistrar"
        android:onClick="totalPago"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>